gcode/antlr-coding/openjdk/CymbolParser.java
/***
 * Excerpted from "Language Implementation Patterns",
 * published by The Pragmatic Bookshelf.
 * Copyrights apply to this code. It may not be used to create training material, 
 * courses, books, articles, and the like. Contact us if you are in doubt.
 * We make no guarantees that this code is fit for any purpose. 
 * Visit http://www.pragmaticprogrammer.com/titles/tpdsl for more book information.
***/
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /Users/parrt/research/book/TPDSL/Book/code/symtab/class/Cymbol.g 2009-09-23 17:37:56

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class CymbolParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "METHOD_DECL", "ARG_DECL", "BLOCK", "MEMBERS", "VAR_DECL", "FIELD_DECL", "CALL", "ELIST", "EXPR", "ASSIGN", "EXTENDS", "ID", "INT", "LETTER", "WS", "SL_COMMENT", "'class'", "'{'", "'}'", "';'", "':'", "'public'", "'('", "')'", "','", "'float'", "'int'", "'void'", "'return'", "'+'", "'.'", "'this'", "'super'"
    };
    public static final int LETTER=17;
    public static final int T__35=35;
    public static final int T__28=28;
    public static final int T__23=23;
    public static final int T__36=36;
    public static final int T__20=20;
    public static final int EXPR=12;
    public static final int ARG_DECL=5;
    public static final int WS=18;
    public static final int T__21=21;
    public static final int FIELD_DECL=9;
    public static final int T__33=33;
    public static final int T__22=22;
    public static final int T__29=29;
    public static final int MEMBERS=7;
    public static final int BLOCK=6;
    public static final int T__30=30;
    public static final int INT=16;
    public static final int T__31=31;
    public static final int EOF=-1;
    public static final int T__27=27;
    public static final int ASSIGN=13;
    public static final int T__32=32;
    public static final int CALL=10;
    public static final int T__24=24;
    public static final int METHOD_DECL=4;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int VAR_DECL=8;
    public static final int T__34=34;
    public static final int SL_COMMENT=19;
    public static final int EXTENDS=14;
    public static final int ELIST=11;
    public static final int ID=15;

    // delegates
    // delegators


        public CymbolParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public CymbolParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return CymbolParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/parrt/research/book/TPDSL/Book/code/symtab/class/Cymbol.g"; }


    public static class compilationUnit_return extends ParserRuleReturnScope {
        CymbolAST tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "compilationUnit"
    // /Users/parrt/research/book/TPDSL/Book/code/symtab/class/Cymbol.g:21:1: compilationUnit : ( classDefinition | varDeclaration | methodDeclaration )+ EOF ;
    public final CymbolParser.compilationUnit_return compilationUnit() throws RecognitionException {
        CymbolParser.compilationUnit_return retval = new CymbolParser.compilationUnit_return();
        retval.start = input.LT(1);

        CymbolAST root_0 = null;

        Token EOF4=null;
        CymbolParser.classDefinition_return classDefinition1 = null;

        CymbolParser.varDeclaration_return varDeclaration2 = null;

        CymbolParser.methodDeclaration_return methodDeclaration3 = null;


        CymbolAST EOF4_tree=null;

        try {
            // /Users/parrt/research/book/TPDSL/Book/code/symtab/class/Cymbol.g:22:5: ( ( classDefinition | varDeclaration | methodDeclaration )+ EOF )
            // /Users/parrt/research/book/TPDSL/Book/code/symtab/class/Cymbol.g:22:9: ( classDefinition | varDeclaration | methodDeclaration )+ EOF
            {
            root_0 = (CymbolAST)adaptor.nil();

            // /Users/parrt/research/book/TPDSL/Book/code/symtab/class/Cymbol.g:22:9: ( classDefinition | varDeclaration | methodDeclaration )+
            int cnt1=0;
            loop1:
            do {
                int alt1=4;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==20) ) {
                    alt1=1;
                }
                else if ( (LA1_0==ID||(LA1_0>=29 && LA1_0<=31)) ) {
                    int LA1_3 = input.LA(2);

                    if ( (LA1_3==ID) ) {
                        int LA1_4 = input.LA(3);

                        if ( (LA1_4==26) ) {
                            alt1=3;
                        }
                        else if ( (LA1_4==ASSIGN||LA1_4==23) ) {
                            alt1=2;
                        }


                    }


                }


                switch (alt1) {
            	case 1 :
            	    // /Users/parrt/research/book/TPDSL/Book/code/symtab/class/Cymbol.g:22:11: classDefinition
            	    {
            	    pushFollow(FOLLOW_classDefinition_in_compilationUnit138);
            	    classDefinition1=classDefinition();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, classDefinition1.getTree());

            	    }
            	    break;
            	case 2 :
            	    // /Users/parrt/research/book/TPDSL/Book/code/symtab/class/Cymbol.g:22:29: varDeclaration
            	    {
            	    pushFollow(FOLLOW_varDeclaration_in_compilationUnit142);
            	    varDeclaration2=varDeclaration();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, varDeclaration2.getTree());

            	    }
            	    break;
            	case 3 :
            	    // /Users/parrt/research/book/TPDSL/Book/code/symtab/class/Cymbol.g:22:46: methodDeclaration
            	    {
            	    pushFollow(FOLLOW_methodDeclaration_in_compilationUnit146);
            	    methodDeclaration3=methodDeclaration();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, methodDeclaration3.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);

            EOF4=(Token)match(input,EOF,FOLLOW_EOF_in_compilationUnit151); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            EOF4_tree = (CymbolAST)adaptor.create(EOF4);
            adaptor.addChild(root_0, EOF4_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CymbolAST)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CymbolAST)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "compilationUnit"

    public static class classDefinition_return extends ParserRuleReturnScope {
        CymbolAST tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "classDefinition"
    // /Users/parrt/research/book/TPDSL/Book/code/symtab/class/Cymbol.g:26:1: classDefinition : 'class' ID ( superClass )? '{' ( classMember )+ '}' ';' -> ^( 'class' ID ( superClass )? ^( MEMBERS ( classMember )+ ) ) ;
    public final CymbolParser.classDefinition_return classDefinition() throws RecognitionException {
        CymbolParser.classDefinition_return retval = new CymbolParser.classDefinition_return();
        retval.start = input.LT(1);

        CymbolAST root_0 = null;

        Token string_literal5=null;
        Token ID6=null;
        Token char_literal8=null;
        Token char_literal10=null;
        Token char_literal11=null;
        CymbolParser.superClass_return superClass7 = null;

        CymbolParser.classMember_return classMember9 = null;


        CymbolAST string_literal5_tree=null;
        CymbolAST ID6_tree=null;
        CymbolAST char_literal8_tree=null;
        CymbolAST char_literal10_tree=null;
        CymbolAST char_literal11_tree=null;
        RewriteRuleTokenStream stream_21=new RewriteRuleTokenStream(adaptor,"token 21");
        RewriteRuleTokenStream stream_22=new RewriteRuleTokenStream(adaptor,"token 22");
        RewriteRuleTokenStream stream_20=new RewriteRuleTokenStream(adaptor,"token 20");
        RewriteRuleTokenStream stream_23=new RewriteRuleTokenStream(adaptor,"token 23");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleSubtreeStream stream_classMember=new RewriteRuleSubtreeStream(adaptor,"rule classMember");
        RewriteRuleSubtreeStream stream_superClass=new RewriteRuleSubtreeStream(adaptor,"rule superClass");
        try {
            // /Users/parrt/research/book/TPDSL/Book/code/symtab/class/Cymbol.g:27:5: ( 'class' ID ( superClass )? '{' ( classMember )+ '}' ';' -> ^( 'class' ID ( superClass )? ^( MEMBERS ( classMember )+ ) ) )
            // /Users/parrt/research/book/TPDSL/Book/code/symtab/class/Cymbol.g:27:9: 'class' ID ( superClass )? '{' ( classMember )+ '}' ';'
            {
            string_literal5=(Token)match(input,20,FOLLOW_20_in_classDefinition171); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_20.add(string_literal5);

            ID6=(Token)match(input,ID,FOLLOW_ID_in_classDefinition173); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ID.add(ID6);

            // /Users/parrt/research/book/TPDSL/Book/code/symtab/class/Cymbol.g:27:20: ( superClass )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==24) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // /Users/parrt/research/book/TPDSL/Book/code/symtab/class/Cymbol.g:27:20: superClass
                    {
                    pushFollow(FOLLOW_superClass_in_classDefinition175);
                    superClass7=superClass();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_superClass.add(superClass7.getTree());

                    }
                    break;

            }

            char_literal8=(Token)match(input,21,FOLLOW_21_in_classDefinition178); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_21.add(char_literal8);

            // /Users/parrt/research/book/TPDSL/Book/code/symtab/class/Cymbol.g:27:36: ( classMember )+
            int cnt3=0;
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==ID||LA3_0==25||(LA3_0>=29 && LA3_0<=31)) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // /Users/parrt/research/book/TPDSL/Book/code/symtab/class/Cymbol.g:27:36: classMember
            	    {
            	    pushFollow(FOLLOW_classMember_in_classDefinition180);
            	    classMember9=classMember();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_classMember.add(classMember9.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt3 >= 1 ) break loop3;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(3, input);
                        throw eee;
                }
                cnt3++;
            } while (true);

            char_literal10=(Token)match(input,22,FOLLOW_22_in_classDefinition183); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_22.add(char_literal10);

            char_literal11=(Token)match(input,23,FOLLOW_23_in_classDefinition185); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_23.add(char_literal11);



            // AST REWRITE
            // elements: superClass, ID, 20, classMember
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CymbolAST)adaptor.nil();
            // 28:9: -> ^( 'class' ID ( superClass )? ^( MEMBERS ( classMember )+ ) )
            {
                // /Users/parrt/research/book/TPDSL/Book/code/symtab/class/Cymbol.g:28:12: ^( 'class' ID ( superClass )? ^( MEMBERS ( classMember )+ ) )
                {
                CymbolAST root_1 = (CymbolAST)adaptor.nil();
                root_1 = (CymbolAST)adaptor.becomeRoot(stream_20.nextNode(), root_1);

                adaptor.addChild(root_1, stream_ID.nextNode());
                // /Users/parrt/research/book/TPDSL/Book/code/symtab/class/Cymbol.g:28:25: ( superClass )?
                if ( stream_superClass.hasNext() ) {
                    adaptor.addChild(root_1, stream_superClass.nextTree());

                }
                stream_superClass.reset();
                // /Users/parrt/research/book/TPDSL/Book/code/symtab/class/Cymbol.g:28:37: ^( MEMBERS ( classMember )+ )
                {
                CymbolAST root_2 = (CymbolAST)adaptor.nil();
                root_2 = (CymbolAST)adaptor.becomeRoot((CymbolAST)adaptor.create(MEMBERS, "MEMBERS"), root_2);

                if ( !(stream_classMember.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_classMember.hasNext() ) {
                    adaptor.addChild(root_2, stream_classMember.nextTree());

                }
                stream_classMember.reset();

                adaptor.addChild(root_1, root_2);
                }

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CymbolAST)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CymbolAST)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "classDefinition"

    public static class superClass_return extends ParserRuleReturnScope {
        CymbolAST tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "superClass"
    // /Users/parrt/research/book/TPDSL/Book/code/symtab/class/Cymbol.g:30:1: superClass : ':' 'public' ID -> ^( EXTENDS ID ) ;
    public final CymbolParser.superClass_return superClass() throws RecognitionException {
        CymbolParser.superClass_return retval = new CymbolParser.superClass_return();
        retval.start = input.LT(1);

        CymbolAST root_0 = null;

        Token char_literal12=null;
        Token string_literal13=null;
        Token ID14=null;

        CymbolAST char_literal12_tree=null;
        CymbolAST string_literal13_tree=null;
        CymbolAST ID14_tree=null;
        RewriteRuleTokenStream stream_24=new RewriteRuleTokenStream(adaptor,"token 24");
        RewriteRuleTokenStream stream_25=new RewriteRuleTokenStream(adaptor,"token 25");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");

        try {
            // /Users/parrt/research/book/TPDSL/Book/code/symtab/class/Cymbol.g:31:2: ( ':' 'public' ID -> ^( EXTENDS ID ) )
            // /Users/parrt/research/book/TPDSL/Book/code/symtab/class/Cymbol.g:31:4: ':' 'public' ID
            {
            char_literal12=(Token)match(input,24,FOLLOW_24_in_superClass224); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_24.add(char_literal12);

            string_literal13=(Token)match(input,25,FOLLOW_25_in_superClass226); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_25.add(string_literal13);

            ID14=(Token)match(input,ID,FOLLOW_ID_in_superClass228); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ID.add(ID14);



            // AST REWRITE
            // elements: ID
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CymbolAST)adaptor.nil();
            // 31:20: -> ^( EXTENDS ID )
            {
                // /Users/parrt/research/book/TPDSL/Book/code/symtab/class/Cymbol.g:31:23: ^( EXTENDS ID )
                {
                CymbolAST root_1 = (CymbolAST)adaptor.nil();
                root_1 = (CymbolAST)adaptor.becomeRoot((CymbolAST)adaptor.create(EXTENDS, "EXTENDS"), root_1);

                adaptor.addChild(root_1, stream_ID.nextNode());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CymbolAST)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CymbolAST)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "superClass"

    public static class classMember_return extends ParserRuleReturnScope {
        CymbolAST tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "classMember"
    // /Users/parrt/research/book/TPDSL/Book/code/symtab/class/Cymbol.g:35:1: classMember : ( type ID ( '=' expression )? ';' -> ^( FIELD_DECL type ID ( expression )? ) | methodDeclaration | 'public' ':' ->);
    public final CymbolParser.classMember_return classMember() throws RecognitionException {
        CymbolParser.classMember_return retval = new CymbolParser.classMember_return();
        retval.start = input.LT(1);

        CymbolAST root_0 = null;

        Token ID16=null;
        Token char_literal17=null;
        Token char_literal19=null;
        Token string_literal21=null;
        Token char_literal22=null;
        CymbolParser.type_return type15 = null;

        CymbolParser.expression_return expression18 = null;

        CymbolParser.methodDeclaration_return methodDeclaration20 = null;


        CymbolAST ID16_tree=null;
        CymbolAST char_literal17_tree=null;
        CymbolAST char_literal19_tree=null;
        CymbolAST string_literal21_tree=null;
        CymbolAST char_literal22_tree=null;
        RewriteRuleTokenStream stream_24=new RewriteRuleTokenStream(adaptor,"token 24");
        RewriteRuleTokenStream stream_23=new RewriteRuleTokenStream(adaptor,"token 23");
        RewriteRuleTokenStream stream_25=new RewriteRuleTokenStream(adaptor,"token 25");
        RewriteRuleTokenStream stream_ASSIGN=new RewriteRuleTokenStream(adaptor,"token ASSIGN");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        RewriteRuleSubtreeStream stream_expression=new RewriteRuleSubtreeStream(adaptor,"rule expression");
        try {
            // /Users/parrt/research/book/TPDSL/Book/code/symtab/class/Cymbol.g:36:2: ( type ID ( '=' expression )? ';' -> ^( FIELD_DECL type ID ( expression )? ) | methodDeclaration | 'public' ':' ->)
            int alt5=3;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==ID||(LA5_0>=29 && LA5_0<=31)) ) {
                int LA5_1 = input.LA(2);

                if ( (LA5_1==ID) ) {
                    int LA5_3 = input.LA(3);

                    if ( (LA5_3==26) ) {
                        alt5=2;
                    }
                    else if ( (LA5_3==ASSIGN||LA5_3==23) ) {
                        alt5=1;
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return retval;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 5, 3, input);

                        throw nvae;
                    }
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 5, 1, input);

                    throw nvae;
                }
            }
            else if ( (LA5_0==25) ) {
                alt5=3;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }
            switch (alt5) {
                case 1 :
                    // /Users/parrt/research/book/TPDSL/Book/code/symtab/class/Cymbol.g:36:4: type ID ( '=' expression )? ';'
                    {
                    pushFollow(FOLLOW_type_in_classMember248);
                    type15=type();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_type.add(type15.getTree());
                    ID16=(Token)match(input,ID,FOLLOW_ID_in_classMember250); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_ID.add(ID16);

                    // /Users/parrt/research/book/TPDSL/Book/code/symtab/class/Cymbol.g:36:12: ( '=' expression )?
                    int alt4=2;
                    int LA4_0 = input.LA(1);

                    if ( (LA4_0==ASSIGN) ) {
                        alt4=1;
                    }
                    switch (alt4) {
                        case 1 :
                            // /Users/parrt/research/book/TPDSL/Book/code/symtab/class/Cymbol.g:36:13: '=' expression
                            {
                            char_literal17=(Token)match(input,ASSIGN,FOLLOW_ASSIGN_in_classMember253); if (state.failed) return retval; 
                            if ( state.backtracking==0 ) stream_ASSIGN.add(char_literal17);

                            pushFollow(FOLLOW_expression_in_classMember255);
                            expression18=expression();

                            state._fsp--;
                            if (state.failed) return retval;
                            if ( state.backtracking==0 ) stream_expression.add(expression18.getTree());

                            }
                            break;

                    }

                    char_literal19=(Token)match(input,23,FOLLOW_23_in_classMember259); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_23.add(char_literal19);



                    // AST REWRITE
                    // elements: expression, ID, type
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CymbolAST)adaptor.nil();
                    // 36:34: -> ^( FIELD_DECL type ID ( expression )? )
                    {
                        // /Users/parrt/research/book/TPDSL/Book/code/symtab/class/Cymbol.g:36:37: ^( FIELD_DECL type ID ( expression )? )
                        {
                        CymbolAST root_1 = (CymbolAST)adaptor.nil();
                        root_1 = (CymbolAST)adaptor.becomeRoot((CymbolAST)adaptor.create(FIELD_DECL, "FIELD_DECL"), root_1);

                        adaptor.addChild(root_1, stream_type.nextTree());
                        adaptor.addChild(root_1, stream_ID.nextNode());
                        // /Users/parrt/research/book/TPDSL/Book/code/symtab/class/Cymbol.g:36:58: ( expression )?
                        if ( stream_expression.hasNext() ) {
                            adaptor.addChild(root_1, stream_expression.nextTree());

                        }
                        stream_expression.reset();

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;}
                    }
                    break;
                case 2 :
                    // /Users/parrt/research/book/TPDSL/Book/code/symtab/class/Cymbol.g:37:4: methodDeclaration
                    {
                    root_0 = (CymbolAST)adaptor.nil();

                    pushFollow(FOLLOW_methodDeclaration_in_classMember277);
                    methodDeclaration20=methodDeclaration();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, methodDeclaration20.getTree());

                    }
                    break;
                case 3 :
                    // /Users/parrt/research/book/TPDSL/Book/code/symtab/class/Cymbol.g:38:4: 'public' ':'
                    {
                    string_literal21=(Token)match(input,25,FOLLOW_25_in_classMember282); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_25.add(string_literal21);

                    char_literal22=(Token)match(input,24,FOLLOW_24_in_classMember284); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_24.add(char_literal22);



                    // AST REWRITE
                    // elements: 
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CymbolAST)adaptor.nil();
                    // 38:17: ->
                    {
                        root_0 = null;
                    }

                    retval.tree = root_0;}
                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CymbolAST)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CymbolAST)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "classMember"

    public static class methodDeclaration_return extends ParserRuleReturnScope {
        CymbolAST tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "methodDeclaration"
    // /Users/parrt/research/book/TPDSL/Book/code/symtab/class/Cymbol.g:42:1: methodDeclaration : type ID '(' ( formalParameters )? ')' block -> ^( METHOD_DECL type ID ( formalParameters )? block ) ;
    public final CymbolParser.methodDeclaration_return methodDeclaration() throws RecognitionException {
        CymbolParser.methodDeclaration_return retval = new CymbolParser.methodDeclaration_return();
        retval.start = input.LT(1);

        CymbolAST root_0 = null;

        Token ID24=null;
        Token char_literal25=null;
        Token char_literal27=null;
        CymbolParser.type_return type23 = null;

        CymbolParser.formalParameters_return formalParameters26 = null;

        CymbolParser.block_return block28 = null;


        CymbolAST ID24_tree=null;
        CymbolAST char_literal25_tree=null;
        CymbolAST char_literal27_tree=null;
        RewriteRuleTokenStream stream_26=new RewriteRuleTokenStream(adaptor,"token 26");
        RewriteRuleTokenStream stream_27=new RewriteRuleTokenStream(adaptor,"token 27");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleSubtreeStream stream_formalParameters=new RewriteRuleSubtreeStream(adaptor,"rule formalParameters");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
        try {
            // /Users/parrt/research/book/TPDSL/Book/code/symtab/class/Cymbol.g:43:5: ( type ID '(' ( formalParameters )? ')' block -> ^( METHOD_DECL type ID ( formalParameters )? block ) )
            // /Users/parrt/research/book/TPDSL/Book/code/symtab/class/Cymbol.g:43:9: type ID '(' ( formalParameters )? ')' block
            {
            pushFollow(FOLLOW_type_in_methodDeclaration305);
            type23=type();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_type.add(type23.getTree());
            ID24=(Token)match(input,ID,FOLLOW_ID_in_methodDeclaration307); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ID.add(ID24);

            char_literal25=(Token)match(input,26,FOLLOW_26_in_methodDeclaration309); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_26.add(char_literal25);

            // /Users/parrt/research/book/TPDSL/Book/code/symtab/class/Cymbol.g:43:21: ( formalParameters )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==ID||(LA6_0>=29 && LA6_0<=31)) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // /Users/parrt/research/book/TPDSL/Book/code/symtab/class/Cymbol.g:43:21: formalParameters
                    {
                    pushFollow(FOLLOW_formalParameters_in_methodDeclaration311);
                    formalParameters26=formalParameters();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_formalParameters.add(formalParameters26.getTree());

                    }
                    break;

            }

            char_literal27=(Token)match(input,27,FOLLOW_27_in_methodDeclaration314); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_27.add(char_literal27);

            pushFollow(FOLLOW_block_in_methodDeclaration316);
            block28=block();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_block.add(block28.getTree());

